--- a/patterns.html
+++ b/patterns.html
@@ -15,20 +15,34 @@
   
   <body>
     <div class="header">
-        <h1>Learn to knit</h1> 
+      <h1>Learn to knit</h1> 
     </div>
     <div class="nav-container">
         <ul class="nav">
-            <a href="/video.html"><li class="nav-item videos">Videos</li></a>
-            <a href="/patterns.html"><li class="nav-item patterns">Patterns</li></a>
-            <a href="/resources.html"><li class="nav-item resources">Resources</li></a>
+          <a href="/video.html"><li class="nav-item videos">Videos</li></a>
+          <a href="/patterns.html"><li class="nav-item patterns">Patterns</li></a>
+          <a href="/resources.html"><li class="nav-item resources">Resources</li></a>
         </ul>
     </div>
+
+    <div class="patterns-expand detail">
+        <div id="patterns" class="text"></div>
+    </div>
+
+    <script class="template-pattern" type="text/x-handlebars-template">
+      <div class="pattern-container">
+        <a href="{{url}}"><h2 class="link">{{title}}</h2></a>
+        <div class="pattern-description">
+          {{description}}
+        </div>
+      </div>
+    </script>
 
     <!-- jQuery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-    <script type="text/javascript" src="js/tabletop.js"></script>
+    <script type="text/javascript" src="js/vendor/tabletop.js"></script>
+    <script type="text/javascript" src="js/patterns.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
