--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Annie Daniel</title>
+    <title>Learn to knit | Resources</title>
 
 <!--     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
     <link href="css/styles.css" rel="stylesheet">
@@ -15,14 +15,14 @@
   
   <body>
   	<div class="header">
-    	<h1>Learn to knit</h1> 
+        <a href="http://annie-daniel.com/static/knit"><h1>Learn to knit</h1> 
     </div>
     <div class="nav-container">
-        <ul class="nav">
-        	<a href="/video.html"><li class="nav-item videos">Videos</li></a>
-        	<a href="/patterns.html"><li class="nav-item patterns">Patterns</li></a>
-        	<a href="/resources.html"><li class="nav-item resources">Resources</li></a>
-        </ul>
+      <ul class="nav">
+          <li class="nav-item videos"><a href="http://annie-daniel.com/static/knit/video.html">Videos</a></li>
+          <li class="nav-item patterns"><a href="http://annie-daniel.com/static/knit/patterns.html">Patterns</a></li>
+          <li class="nav-item resources"><a href="http://annie-daniel.com/static/knit/resources.html">Resources</a></li>
+      </ul>
     </div>
 
     <div class="resources-expand detail">
@@ -32,9 +32,9 @@
     <script class="template-resource" type="text/x-handlebars-template">
       <div class="resource-container">
         <a href="{{url}}"><h2 class="link">{{title}}</h2></a>
-        <div class="resource-description">
+<!--         <div class="resource-description">
           {{description}}
-        </div>
+        </div> -->
       </div>
     </script>
 
