--- a/video.html
+++ b/video.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Annie Daniel</title>
-
-<!--     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+    <title>Learn to knit | Videos</title>
     <link href="css/styles.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
@@ -15,15 +13,16 @@
   
   <body>
     <div class="header">
-      <h1>Learn to knit</h1> 
+        <a href="http://annie-daniel.com/static/knit"><h1>Learn to knit</h1> 
     </div>
     <div class="nav-container">
-        <ul class="nav">
-          <a href="/video.html"><li class="nav-item videos">Videos</li></a>
-          <a href="/patterns.html"><li class="nav-item patterns">Patterns</li></a>
-          <a href="/resources.html"><li class="nav-item resources">Resources</li></a>
-        </ul>
+      <ul class="nav">
+          <li class="nav-item videos"><a href="http://annie-daniel.com/static/knit/video.html">Videos</a></li>
+          <li class="nav-item patterns"><a href="http://annie-daniel.com/static/knit/patterns.html">Patterns</a></li>
+          <li class="nav-item resources"><a href="http://annie-daniel.com/static/knit/resources.html">Resources</a></li>
+      </ul>
     </div>
+
 
 
     <div class="videos-expand detail">
