--- a/video.html
+++ b/video.html
@@ -17,9 +17,9 @@
     </div>
     <div class="nav-container">
       <ul class="nav">
-          <li class="nav-item videos"><a href="http://annie-daniel.com/static/knit/video.html">Videos</a></li>
-          <li class="nav-item patterns"><a href="http://annie-daniel.com/static/knit/patterns.html">Patterns</a></li>
-          <li class="nav-item resources"><a href="http://annie-daniel.com/static/knit/resources.html">Resources</a></li>
+          <li class="nav-item videos"><a href="video.html">Videos</a></li>
+          <li class="nav-item patterns"><a href="patterns.html">Patterns</a></li>
+          <li class="nav-item resources"><a href="resources.html">Resources</a></li>
       </ul>
     </div>
 
