--- a/patterns.html
+++ b/patterns.html
@@ -31,7 +31,7 @@
 
     <script class="template-pattern" type="text/x-handlebars-template">
       <div class="pattern-container">
-        <a href="{{url}}"><h2 class="link">{{title}}<span class="level"> | {{category}}</span></h2></a>
+        <a href="{{url}}"><h2 class="link">{{title}}<span class="level">{{type}}, {{category}}</span></h2></a>
 <!--         <div class="pattern-description">
           {{description}}
         </div> -->
