cuter knit abbreviation table

--- a/resources.html
+++ b/resources.html
@@ -28,13 +28,14 @@
     <div class="resources-expand detail">
     	<div id="resources" class="text"></div>
 
-      <div class="abbrevs-expand detail">
-          <table id="abbrevs" class="table text">
+      <div class="abbrevs-expand detail text">
+          <h2>Common abbreviations</h2>
+          <div class="resource-description">Sometimes knitting patterns can look like a top-secret grandma code. Here are some of the most common appreviations and what they mean.</div>
+          <table id="abbrevs" class="table">
             <tr>
               <th>Abbreviation</th>
               <th>Translation</th> 
             </tr>
-            <!-- <div id="abbrevs" class="text"></div> -->
           </table>
       </div>
     </div>
