got rid of unecessary js

--- a/resources.html
+++ b/resources.html
@@ -30,7 +30,7 @@
 
       <div class="abbrevs-expand detail text">
           <h2>Common abbreviations</h2>
-          <div class="resource-description">Sometimes knitting patterns can look like a top-secret grandma code. Here are some of the most common appreviations and what they mean.</div>
+          <div class="resource-description">Sometimes knitting patterns can look like a top-secret grandma code. Here are some of the most common appreviations and what they mean. Purl Soho also has a nice, <a class="inline-link" href="http://www.purlsoho.com/create/knit/terms/">more complete list</a>.</div>
           <table id="abbrevs" class="table">
             <tr>
               <th>Abbreviation</th>
